--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -59,12 +59,12 @@
                                         <div class="col mr-2">
                                             <div class="text-s font-weight-bold text-gray text-normal mb-1">
                                                 New Tickets</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{new_tickets}}</div>
                                         </div>
                                         <div class="col">
                                             <div class="progress progress-sm mr-2">
                                                 <div class="progress-bar bg-primary" role="progressbar"
-                                                    style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                                                    style="width: {{new_tickets}}%" aria-valuenow="50" aria-valuemin="0"
                                                     aria-valuemax="100"></div>
                                             </div>
                                         </div>
@@ -72,21 +72,20 @@
                                 </div>
                             </div>
                         </div>
-
                         <!-- Earnings (Monthly) Card Example -->
                         <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-info shadow h-100 py-2">
+                            <div class="card border-left-warning shadow h-100 py-2">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-s font-weight-bold text-gray text-normal mb-1">
-                                                Tickets In Progress</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                                                In Progress</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{in_progress}}</div>
                                         </div>
                                         <div class="col">
                                             <div class="progress progress-sm mr-2">
-                                                <div class="progress-bar bg-info" role="progressbar"
-                                                    style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                                                <div class="progress-bar bg-warning" role="progressbar"
+                                                    style="width: {{in_progress}}%" aria-valuenow="50" aria-valuemin="0"
                                                     aria-valuemax="100"></div>
                                             </div>
                                         </div>
@@ -103,12 +102,12 @@
                                         <div class="col mr-2">
                                             <div class="text-s font-weight-bold text-gray text-normal mb-1">
                                                 Urgent Tickets</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{urgent_tickets}}</div>
                                         </div>
                                         <div class="col">
                                             <div class="progress progress-sm mr-2">
                                                 <div class="progress-bar bg-danger" role="progressbar"
-                                                    style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                                                    style="width: {{urgent_tickets}}%" aria-valuenow="50" aria-valuemin="0"
                                                     aria-valuemax="100"></div>
                                             </div>
                                         </div>
@@ -119,18 +118,18 @@
 
                         <!-- Pending Requests Card Example -->
                         <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-warning shadow h-100 py-2">
+                            <div class="card border-left-success shadow h-100 py-2">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-s font-weight-bold text-gray text-normal mb-1">
-                                                Not Resolved</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                                                Resolved</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{resolved}}</div>
                                         </div>
                                         <div class="col">
                                             <div class="progress progress-sm mr-2">
-                                                <div class="progress-bar bg-warning" role="progressbar"
-                                                    style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                                                <div class="progress-bar bg-success" role="progressbar"
+                                                    style="width: {{resolved}}%" aria-valuenow="50" aria-valuemin="0"
                                                     aria-valuemax="100"></div>
                                             </div>
                                         </div>
@@ -172,16 +171,16 @@
                                             <i class="fas fa-circle text-primary"></i> New Tickets
                                         </span>
                                         <span class="mr-2">
-                                            <i class="fas fa-circle text-success"></i> In Progress 
+                                            <i class="fas fa-circle text-warning"></i> In Progress 
                                         </span>
                                         <span class="mr-2">
-                                            <i class="fas fa-circle text-info"></i> Urgent Tickets
+                                            <i class="fas fa-circle text-danger"></i> Urgent Tickets
                                         </span>
                                         <span class="mr-2">
-                                            <i class="fas fa-circle text-info"></i> Not Resolved
+                                            <i class="fas fa-circle text-success"></i> Resolved
                                         </span>
                                     </div>
-                                    <div class="chart-pie pt-4 pb-2">
+                                    <div class="pie_chart pt-4 pb-2">
                                         <canvas id="myPieChart"></canvas>
                                     </div>
                                 </div>
@@ -214,9 +213,16 @@
                                     <table class="table table-sm">
                                         <tr>
                                             <th>Name</th>
+                                            <th>Status</th>
                                             <th>Manage</th>
-                                            <th>Edit</th>
                                         </tr>
+                                        {% for i in projects %}
+                                            <tr>
+                                                <td>{{i.name}}</td>
+                                                <td>{{i.status}}</td>
+                                                <td><a href=""><i class="far fa-edit"></i></a><td>
+                                            </tr>
+                                        {% endfor %}
                                 
                                     </table>
                                 </div>
@@ -252,10 +258,19 @@
                                 </div>
                                 <!-- Card Body -->
                                 <div class="card card-body">
-                                    <table class="table table-sm">
+                                    <table class="table">
                                         <tr>
+                                            <th>Name</th>
+                                            <th>Date</th>
                                         </tr>
-                                
+                
+                                        {% for i in tickets %}
+                                            <tr>
+                                                <td>{{i.name}}</td>
+                                                <td>{{i.date_created}}</td>
+                                            </tr>
+                                        {% endfor %}
+                                        
                                     </table>
                                 </div>
                             </div>
@@ -267,7 +282,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Tickets By Category</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">All Tickets</h6>
                                     <div class="dropdown no-arrow">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -285,10 +300,27 @@
                                 </div>
                                 <!-- Card Body -->
                                 <div class="card shadow mb-4">
-                                    <div class="card-body">
-                                        <div class="chart-bar">
-                                            <canvas id="myBarChart"></canvas>
-                                        </div>
+                                    <div class="card card-body">
+                                               
+                                        <table class="table">
+                                            <tr>
+                                                <th>Name</th>
+                                                <th>Status</th>
+                                                <th>description</th>
+                                                <th>Date</th>
+                                            </tr>
+                    
+                                            {% for i in tickets %}
+                                                <tr>
+                                                    <td>{{i.name}}</td>
+                                                    <td>{{i.status}}</td>
+                                                    <td>{{i.description}}</td>
+                                                    <td>{{i.date_created}}</td>
+                                                </tr>
+                                            {% endfor %}
+                                            
+                                        </table>
+
                                     </div>
                                 </div>
                             </div>
