--- a/accounts/templates/accounts/view_projects.html
+++ b/accounts/templates/accounts/view_projects.html
@@ -27,75 +27,66 @@
 <body id="page-top">
 
      <!-- Page Wrapper -->
-     <div id="wrapper">
+    <div id="wrapper">
 
         {% include 'accounts/sidebar.html' %}
  
          <!-- Content Wrapper -->
-         <div id="content-wrapper" class="d-flex flex-column">
+        <div id="content-wrapper" class="d-flex flex-column">
  
-             <!-- Main Content -->
-             <div id="content">
+            <!-- Main Content -->
+            <div id="content">
 
-            <!-- Top bar-->
-            {% include 'accounts/topbar.html' %}
-            <!--End Top Bar-->
+                <!-- Top bar-->
+                {% include 'accounts/topbar.html' %}
+                <!--End Top Bar-->
 
 
-            <div class="container">
-                <div class="row">
-                   <div class="col-lg-3"></div>
-                   <div class="col-xl-13 col-lg-12">
-                    <div class="card shadow mb-4">
-                        <!-- Card Header - Dropdown -->
-                        <div
-                            class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                            <h6 class="m-0 font-weight-bold text-primary">Projects List</h6>
-                            <div class="dropdown no-arrow">
-                                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                    aria-labelledby="dropdownMenuLink">
-                                    <div class="dropdown-header">Dropdown Header:</div>
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">Something else here</a>
-                                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3"></div>
+                            <div class="col-xl-13 col-lg-12">
+                                    <div class="card shadow mb-4">
+                                        <!-- Card Header - Dropdown -->
+                                        <div class="row">
+                                            <div class="col-md">
+                                                <div class="card card-body">
+                                                    <h5>Projects</h5>
+                                                </div>
+                                                <div class="card card-body">
+                                                    <table class="table">
+                                                        <tr>
+                                                            <th>Name</th>
+                                                            <th>Status</th>
+                                                            <th>description</th>
+                                                        </tr>
+                                
+                                                        {% for i in projects %}
+                                                            <tr>
+                                                                <td>{{i.name}}</td>
+                                                                <td>{{i.status}}</td>
+                                                                <td>{{i.description}}</td>
+                                                            </tr>
+                                                        {% endfor %}
+                                                        
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                             </div>
-                        </div>
-                        <!-- Card Body -->
-                        <div class="card shadow mb-4">
-                            <div class="card-body">
-                                Projects List
-                            </div>
-                        </div>
-                    </div>
+                    </div>    
                 </div>
-                   <div class="col-md-3"></div>
-                </div>
+        
+
             </div>
+            <!-- End of Main Content -->
 
-
-        <!-- End of Main Content -->
-
-        <!-- Footer -->
-        <footer class="sticky-footer bg-white">
-            <div class="container my-auto">
-                <div class="copyright text-center my-auto">
-                    <span>Copyright &copy; Your Website 2020</span>
-                </div>
-            </div>
-        </footer>
-        <!-- End of Footer -->
+        </div>
+        <!-- End of Content Wrapper -->
 
     </div>
-    <!-- End of Content Wrapper -->
-
-</div>
-<!-- End of Page Wrapper -->
+    <!-- End of Page Wrapper -->
 
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
