--- a/accounts/templates/accounts/ticket_details.html
+++ b/accounts/templates/accounts/ticket_details.html
@@ -26,143 +26,110 @@
 
 <body id="page-top">
 
-     <!-- Page Wrapper -->
-     <div id="wrapper">
+    <!-- Page Wrapper -->
+    <div id="wrapper">
 
-        {% include 'accounts/sidebar.html' %}
- 
-         <!-- Content Wrapper -->
-         <div id="content-wrapper" class="d-flex flex-column">
- 
-             <!-- Main Content -->
-             <div id="content">
+            {% include 'accounts/sidebar.html' %}
 
-            <!-- Top bar-->
-            {% include 'accounts/topbar.html' %}
-            <!--End Top Bar-->
+                <!-- Content Wrapper -->
+                <div id="content-wrapper" class="d-flex flex-column">
+
+                    <!-- Main Content -->
+                    <div id="content">
+
+                <!-- Top bar-->
+                {% include 'accounts/topbar.html' %}
+                <!--End Top Bar-->
 
 
 
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="card shadow mb-4">
-                            <!-- TICKET TITLE -->
-                            <div class="row">
-                                <div class="col-md">
+                                <!-- Content Row -->
+                                <!-- Begin Page Content -->
+                <div class="container-fluid">
+
+                    <!-- Page Heading -->
+                    <h1 class="h3 mb-4 text-gray-800">Ticket Details</h1>
+
+                    <div class="row">
+
+                        <div class="col-lg-6">
+
+                            <!-- Circle Buttons -->
+                            <div class="card shadow mb-4">
+                                <div class="card card-body">
+                                    <h6 class="m-0 font-weight-bold text-primary">Ticket Name</h6> 
+                                    <table class="table">
+
+                                        {% for i in tickets %}
+                                            <tr>
+                                                <th>{{i.name}}</th>
+                                        {% endfor %}
+                                        
+                                    </table>
+
+                                </div>
+                            </div>
+
+                            <!-- Brand Buttons -->
+                            <div class="card shadow mb-4">
+                                <div class="card card-body">
+                                    <h6 class="m-0 font-weight-bold text-primary">Description</h6> 
+                                    <table class="table">
+
+                                        {% for i in tickets %}
+                                            <tr>
+                                                <th>{{i.description}}</th>
+                                            </tr>
+                                        {% endfor %}
+                                        
+                                    </table>
+
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="col-lg-6">
+
+                            <div class="card shadow mb-4">
+                                <div class="card shadow mb-4">
                                     <div class="card card-body">
-                                        <h6 class="m-0 font-weight-bold text-primary">Tickets</h6>
-                                    </div>
-                                    <div class="card card-body">
+                                        <h6 class="m-0 font-weight-bold text-primary">Status</h6> 
                                         <table class="table">
                                             <tr>
-                                                <th>Name</th>
+                                                <th>Submitter</th>
+                                                <th>Status</th>
+                                                <th>description</th>
+                                                <th>Date</th>
                                             </tr>
-                    
+    
                                             {% for i in tickets %}
                                                 <tr>
                                                     <td>{{i.name}}</td>
-                                                </tr>
-                                            {% endfor %}
-                                            
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="card shadow mb-4">
-                            <!-- Card Header - Dropdown -->
-                            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                <h6 class="m-0 font-weight-bold text-primary">Status</h6>
-                                <div class="dropdown no-arrow">
-                                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                        aria-labelledby="dropdownMenuLink">
-                                        <div class="dropdown-header">Dropdown Header:</div>
-                                        <a class="dropdown-item" href="#">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Something else here</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Card Body -->
-                            <div class="card card-body">
-                                <table class="table table-md">
-                                    <tr>
-                                        <th>Status</th>
-                                    </tr>
-                                    <tr>
-                                        <th>Status</th>
-                                    </tr>
-                                    <tr>
-                                        <th>Status</th>
-                                    </tr>
-                                    <tr>
-                                        <th>Status</th>
-                                    </tr>
-                                    <tr>
-                                        <th>Status</th>
-                                    </tr>
-                                    {% for i in projects %}
-                                        <tr>
-                                            <td>{{i.name}}</td>
-                                            <td>{{i.status}}</td>
-                                            <td><a href=""><i class="far fa-edit"></i></a><td>
-                                        </tr>
-                                    {% endfor %}
-                            
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>    
-            </div>
-
-            <!--TICKET DESCRIPTIONS-->
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="card shadow mb-4">
-                            <!-- TICKET TITLE -->
-                            <div class="row">
-                                <div class="col-md">
-                                    <div class="card card-body">
-                                        <h6 class="m-0 font-weight-bold text-primary">Description</h6>
-                                    </div>
-                                    <div class="card card-body">
-                                        <table class="table">
-                                            <tr>
-                                                <th>Description</th>
-                                            </tr>
-                    
-                                            {% for i in tickets %}
-                                                <tr>
+                                                    <td>{{i.status}}</td>
                                                     <td>{{i.description}}</td>
+                                                    <td>{{i.date_created}}</td>
                                                 </tr>
                                             {% endfor %}
                                             
                                         </table>
+    
                                     </div>
                                 </div>
                             </div>
+
                         </div>
+
                     </div>
-                </div>    
-            </div>
-            
-            
-    <!-- End of Content Wrapper -->
 
-    
+                </div>
+            
 
-</div>
-<!-- End of Page Wrapper -->
+
+
+
+    </div>
+    <!-- End of Page Wrapper -->
 
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
@@ -189,3 +156,5 @@
 </body>
 
 </html>
+
+
